--- a/Views/GeneralInfoUC.xaml
+++ b/Views/GeneralInfoUC.xaml
@@ -3,12 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" d:DesignWidth="500">
+             mc:Ignorable="d" d:DesignWidth="600">
     <GroupBox Header="General Information" Background="White">
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="7*"/>
-                <ColumnDefinition Width="6*"/>
+                <ColumnDefinition Width="10*"/>
             </Grid.ColumnDefinitions>
             <Grid Margin="5">
                 <Grid.RowDefinitions>
@@ -22,14 +22,17 @@
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <TextBlock VerticalAlignment="Center" Margin="5">Id</TextBlock>
-                <TextBox Text="{Binding PackageGeneral.Id}" Grid.Column="1"/>
+                <TextBlock VerticalAlignment="Bottom" Margin="5,0,5,5">Id</TextBlock>
+                <Grid VerticalAlignment="Stretch" Margin="0" Grid.Column="1">
+                    <TextBox Margin="0,0,55,0" HorizontalAlignment="Stretch" Width="Auto" Text="{Binding PackageGeneral.Id}"/>
+                    <Button Command="{Binding CreatePackageGuidCommand}" Margin="5,0" FontSize="8" Height="16" HorizontalAlignment="Right">New GUID</Button>
+                </Grid>
                 <TextBlock VerticalAlignment="Center" Margin="5" Grid.Row="1">Name</TextBlock>
                 <TextBox Text="{Binding PackageGeneral.Name}" Grid.Column="1" Grid.Row="1"/>
                 <TextBlock VerticalAlignment="Center" Margin="5" Grid.Row="2">Description</TextBlock>
                 <TextBox Text="{Binding PackageGeneral.Description}" Grid.Column="1" Grid.Row="2"/>
                 <TextBlock VerticalAlignment="Center" Margin="5" Grid.Row="3">Version</TextBlock>
-                <TextBox Text="{Binding PackageGeneral.Version}" Grid.Column="1" Grid.Row="3" FontWeight="Bold" Foreground="Red"/>
+                <TextBox Text="{Binding PackageGeneral.Version,UpdateSourceTrigger=PropertyChanged}" Grid.Column="1" Grid.Row="3" FontWeight="Bold" Foreground="Red"/>
                 <TextBlock VerticalAlignment="Center" Margin="5" Grid.Row="4">Vendor</TextBlock>
                 <TextBox Text="{Binding PackageGeneral.Vendor}" Grid.Column="1" Grid.Row="4"/>
             </Grid>
@@ -47,13 +50,19 @@
                 </Grid.ColumnDefinitions>
                 <TextBlock VerticalAlignment="Center" Margin="5">Copyright</TextBlock>
                 <TextBox Text="{Binding PackageGeneral.Copyright}" Grid.Column="1"/>
-                <TextBlock VerticalAlignment="Center" Margin="5" Grid.Row="1">Icon</TextBlock>
-                <TextBox Text="{Binding PackageGeneral.Icon}" Grid.Column="1" Grid.Row="1"/>
+                <Grid VerticalAlignment="Stretch" Margin="0" Grid.Row="1">
+                    <TextBlock VerticalAlignment="Center" Margin="5" Grid.Row="1">Icon</TextBlock>
+                    <Image Margin="5,0" Height="16" Width="16" HorizontalAlignment="Right" Source="{Binding IconPath}" Stretch="Fill" />
+                </Grid>
+                <Grid VerticalAlignment="Stretch" Margin="0" Grid.Row="1" Grid.Column="1">
+                    <TextBox Margin="0,0,35,0" HorizontalAlignment="Stretch" Width="Auto" Text="{Binding PackageGeneral.Icon}"/>
+                    <Button Command="{Binding EditIconCommand}" Margin="5,0" FontSize="8" Height="16" HorizontalAlignment="Right">Edit</Button>
+                </Grid>
                 <TextBlock VerticalAlignment="Center" Margin="5" Grid.Row="2">HTML</TextBlock>
                 <TextBox Text="{Binding PackageGeneral.HTML}" Grid.Column="1" Grid.Row="2"/>
                 <TextBlock VerticalAlignment="Center" Margin="5" Grid.Row="3">LicenseAgreement</TextBlock>
                 <TextBox Text="{Binding PackageGeneral.LicenseAgreement}" Grid.Column="1" Grid.Row="3"/>
-                <TextBlock VerticalAlignment="Center" Margin="5" Grid.Row="4">Req'd Installer Ver.</TextBlock>
+                <TextBlock VerticalAlignment="Center" Margin="5" Grid.Row="4">Min. Installer Version</TextBlock>
                 <TextBox Text="{Binding PackageGeneral.RequiredInstallerVersion}" Grid.Column="1" Grid.Row="4"/>
             </Grid>
         </Grid>
