--- a/Views/ComponentItemFoldersUC.xaml
+++ b/Views/ComponentItemFoldersUC.xaml
@@ -9,13 +9,41 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <ListView ItemsSource="{Binding PackageComponentFolders}">
+            <ListView ItemsSource="{Binding PackageComponentFolders}" ScrollViewer.CanContentScroll="False">
                 <ListView.View>
                     <GridView>
                         <GridView.Columns>
-                            <GridViewColumn Header="Path" DisplayMemberBinding="{Binding Path=Path}" Width="450"/>
-                            <GridViewColumn Header="TargetFolder" DisplayMemberBinding="{Binding Path=TargetFolder}" Width="450"/>
+                            <!--<GridViewColumn Header="Path" DisplayMemberBinding="{Binding Path=Path}" Width="450"/>-->
+                            <GridViewColumn Header="Path" Width="450">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <TreeView Background="Transparent" ItemsSource="{Binding FolderHierarchy}" BorderThickness="0">
+                                            <TreeView.ItemContainerStyle>
+                                                <Style TargetType="{x:Type TreeViewItem}">
+                                                    <Style.Resources>
+                                                        <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="Red"/>
+                                                    </Style.Resources>
+                                                </Style>
+                                            </TreeView.ItemContainerStyle>
+                                            
+                                            <TreeView.ItemTemplate>
+                                                <HierarchicalDataTemplate ItemsSource="{Binding Items}">
+                                                    <Label Content="{Binding Name}" Background="Transparent"/>
+                                                </HierarchicalDataTemplate>
+                                            </TreeView.ItemTemplate>
+                                        </TreeView>
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+                            <GridViewColumn Header="TargetFolder">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Label Content="{Binding TargetFolder}" VerticalAlignment="Top" Background="Transparent"/>
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
                             <GridViewColumn Header="Edit" Width="60">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
@@ -36,7 +64,7 @@
                     </GridView>
                 </ListView.View>
             </ListView>
-            <DockPanel Grid.Row="1" HorizontalAlignment="Right" Margin="0,5">
+            <DockPanel Grid.Row="2" HorizontalAlignment="Right" Margin="0,5">
                 <Button Height="20" Width="100" Margin="5,0" FontSize="10" Command="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}, Path=DataContext.AddFolderCommand}" CommandParameter="FolderHierarchy" Content="Add Folder"/>
             </DockPanel>
         </Grid>
