--- a/App.xaml
+++ b/App.xaml
@@ -1,8 +1,14 @@
 ﻿<Application x:Class="PackageManager.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:conv="clr-namespace:PackageManager.Resources.Converters"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+        <conv:VisToBool x:Key="TrueIfVisible" Inverted="false" Not="false" />
+        <conv:VisToBool x:Key="TrueIfNotVisible" Inverted="false" Not="true" />
+        <conv:VisToBool x:Key="VisibleIfTrue" Inverted="true" Not="false" />
+        <conv:VisToBool x:Key="VisibleIfNotTrue" Inverted="true" Not="true" />
+
         <Style TargetType="{x:Type RadioButton}" x:Key="RadioButtonStyle">
             <Setter Property="Template">
                 <Setter.Value>
