--- a/Views/ComponentItemFoldersUC.xaml
+++ b/Views/ComponentItemFoldersUC.xaml
@@ -2,8 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" d:DesignWidth="900">
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:cc_local="clr-namespace:PackageManager.CustomControls"
+             mc:Ignorable="d" d:DesignWidth="1200">
     <GroupBox Header="Folders" Background="White">
         <Grid>
             <Grid.RowDefinitions>
@@ -19,25 +20,28 @@
                             <GridViewColumn Header="Path" Width="450">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TreeView Background="Transparent" ItemsSource="{Binding FolderHierarchy}" BorderThickness="0">
-                                            <TreeView.ItemContainerStyle>
+                                        <cc_local:TreeViewEx ItemsSource="{Binding FolderHierarchy}" SelectedItem_="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}}, Path=DataContext.SelectedFolderTreeItem, Mode=TwoWay}" BorderThickness="0" Background="Transparent">
+                                            <cc_local:TreeViewEx.ItemContainerStyle>
                                                 <Style TargetType="{x:Type TreeViewItem}">
                                                     <Style.Resources>
-                                                        <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="Red"/>
+                                                        <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="Transparent"/>
                                                     </Style.Resources>
                                                 </Style>
-                                            </TreeView.ItemContainerStyle>
-                                            
-                                            <TreeView.ItemTemplate>
+                                            </cc_local:TreeViewEx.ItemContainerStyle>
+
+                                            <cc_local:TreeViewEx.ItemTemplate>
                                                 <HierarchicalDataTemplate ItemsSource="{Binding Items}">
-                                                    <Label Content="{Binding Name}" Background="Transparent"/>
+                                                    <StackPanel Orientation="Horizontal">
+                                                        <Label Content="{Binding Name}" Background="Transparent"/>
+                                                        <Button Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}}, Path=DataContext.DeleteSelectedFolderItemCommand}" Visibility="{Binding RelativeSource={RelativeSource AncestorType={x:Type TreeViewItem}}, Path=IsSelected, Converter={StaticResource VisibleIfTrue}}">Delete</Button>
+                                                    </StackPanel>
                                                 </HierarchicalDataTemplate>
-                                            </TreeView.ItemTemplate>
-                                        </TreeView>
+                                            </cc_local:TreeViewEx.ItemTemplate>
+                                        </cc_local:TreeViewEx>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <GridViewColumn Header="TargetFolder">
+                            <GridViewColumn Header="TargetFolder" Width="450">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
                                         <Label Content="{Binding TargetFolder}" VerticalAlignment="Top" Background="Transparent"/>
