--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:uc="clr-namespace:PackageManager.Views"
-        Icon="Resources/NonEmbedded/parker.ico"
+        Icon="/PackageManager;component/Resources/NonEmbedded/parker.ico"
         Title="Parker Codesys Package Maker" Name="PackageWindow" Height="700" Width="1200">
     <Grid Margin="5">
         <Grid.RowDefinitions>
